# glsl_type

./: CMakeLists.txt  mat_test.cxx  vec.hxx
include/: mat.hxx  vec.hxx
test/: mat.cxx  vec.cxx
